--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     </head>
-    <body class=" h-screen flex justify-center items-center dark:bg-zinc-950 dark:text-white">
+    <body class=" h-screen flex justify-center items-center px-6 sm:px-0 dark:bg-zinc-950 dark:text-white">
         <main class=" text-center space-y-4">
             <p class=" text-2xl">Teddy Mbugua</p>
             <p>Howdy, I&apos;m a software engineer. I evangelize Go but I tinker with Typescript a tone.</p>
@@ -19,6 +19,12 @@
                 <a href="https://github.com/tbm5k/transcoder" class=" font-semibold underline underline-offset-4 transition duration-150 hover:text-blue-500">transcoder 📽️</a>
             </p>
             <p>And did I say that I use Vim btw?</p>
+            <p class=" mt-8 text-gray-400 text-xs italic">Somewhere on this page, a little secret is waiting to be found—are you curious enough to uncover it?</p>
+            <div class="absolute bottom-2 left-0 right-0 text-white dark:text-zinc-950">
+                <p>Hello curious!</p>
+                <p>Ping me at: <a href="tel:+254711269968">+254711269968</a></p>
+                <p>Rather: <a href="mailto:tedburg5@gmail.com">tedburg5@gmail.com</a></p>
+            </div>
         </main>
     </body>
 </html>
