--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <meta name="description" content="portfolio website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="favicon_io/site.webmanifest">
     </head>
     <body class=" h-screen flex justify-center items-center px-6 sm:px-0 dark:bg-zinc-950 dark:text-white">
         <main class=" text-center space-y-4">
