--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QS3EEV02N0"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-QS3EEV02N0');
+        </script>
         <title>Teddy Mbugua</title>
         <meta charset="UTF-8">
         <meta name="author" content="Teddy Mbugua">
