enable debug mode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'G-QS3EEV02N0');
+          gtag('config', 'G-QS3EEV02N0', { 'debug_mode':true });
         </script>
         <title>Teddy Mbugua</title>
         <meta charset="UTF-8">
